--- a/summoner-list/src/components/Nav/Navbar.css
+++ b/summoner-list/src/components/Nav/Navbar.css
@@ -27,6 +27,7 @@ a:hover {
   color:rgb(41, 108, 233);
 }
 
+/* mobile */
 @media screen and (max-width: 960px) {
   .menu-wrapper ul {
     position: absolute;
@@ -34,7 +35,7 @@ a:hover {
     grid-template-columns: repeat(1, auto);
     grid-gap: 1rem;
     height: 100vh;
-    width: 93%;
+    width: 100%;
     padding: 2rem;
   }
   /* mobile menu icon text clicked */
@@ -42,7 +43,7 @@ a:hover {
     position: absolute;
     background: #ffffff;
     z-index: 1;
-    top: 7rem;
+    top: 6rem;
     left: 0;
     right: 0;
     display: flex;
@@ -66,5 +67,9 @@ a:hover {
     font-size: 30px;
     cursor: pointer;
     z-index: 1;
+  }  
+
+  .nav-menu {
+    z-index: 0; /* navbar submit button dissapear fix */
   }
 }
