--- a/summoner-list/src/views/Home.css
+++ b/summoner-list/src/views/Home.css
@@ -61,7 +61,7 @@
 
 .icon-1 {
   position: absolute;
-  margin-left: 3.5rem;
+  margin-left: 3.1rem;
   z-index: 1;
 }
 
@@ -73,13 +73,16 @@
 
 .icon-2 {
   position: absolute;
-  margin-left: 4.0rem;
+  margin-left: 3.8rem;
   z-index: 1;
 }
 
 .span {
-  font-size: 25px;
+  position: relative;
+  font-size: 24px;
   margin-left: 3rem;
+  letter-spacing: 2px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 /* mobile */
