--- a/summoner-list/src/views/Profilesearch.css
+++ b/summoner-list/src/views/Profilesearch.css
@@ -15,6 +15,7 @@
   width: 100%;
 }
 
+/*
 .page {
   display: flex;
   flex-direction: row;
@@ -22,19 +23,19 @@
   justify-content: center;
   margin-top: 2rem;
   gap: 3rem;
-}
+}*/
 
-.tier-wrapper {
+/*.tier-wrapper {
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 1rem;
   margin-top: 1rem;
   margin: 0rem;
-}
+}*/
 
 .form-wrapper {
-  margin-top: 2rem;
+  margin-top: 3rem;
 }
 
 .league-rank {
@@ -56,32 +57,32 @@
 .btn-secondary {
   position: absolute;
   margin-right: 4.7rem;
-  height: 2.88rem;
-  background-color: #dedede;;
-  border-color: #dedede;;
+  height: 2.95rem;
+  background-color: #b2b2b2;;
+  border-color: #b2b2b2;;
   z-index: 0;
-  border-top-right-radius: 11px;
-  border-bottom-right-radius: 11px;
+  border-top-right-radius: 13px;
+  border-bottom-right-radius: 13px;
   border-top-left-radius: 0px;
   border-bottom-left-radius: 0px;
 }
 
 .btn-secondary:hover {
-  background-color: #dedede;;
-  border-color: #dedede;; 
+  background-color: #b2b2b2;;
+  border-color: #b2b2b2;; 
 }
 
 .form-control-lg {
-  border-width: 2px;
+  border-width: 1px;
   border-radius: 1rem;
-  border-color: #dedede;
+  border-color: #b2b2b2;
 }
 
 /* mobile */
 @media screen and (max-width: 960px) {
   .form-control-lg {
-    border-width: 2px;
+    border-width: 1px;
     border-radius: 1rem;
-    border-color: #dedede;
+    border-color: #b2b2b2;
   }
 }
