--- a/summoner-list/src/views/Duosearch.css
+++ b/summoner-list/src/views/Duosearch.css
@@ -1,4 +1,4 @@
-.btn-danger {
+.btn-warning {
   border-top-right-radius: 17px;
   border-bottom-right-radius: 16px;
   border-top-left-radius: 17px;
@@ -10,4 +10,69 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  gap: 2rem;
+}
+
+.span {
+  position: relative;
+  font-size: 24px;
+  margin-left: 3rem;
+  letter-spacing: 2px;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.iconbutton-4 {
+  display: flex;
+  align-items: center;
+  color: #ffffff;
+}
+
+.icon-4 {
+  position: absolute;
+  margin-left: 3.1rem;
+  z-index: 1;
+  margin-right: 46rem;
+}
+
+.btn-warning {
+  background-color: #4dcfff;
+  border-color: #4dcfff;
+  color: #ffffff;
+  font-weight: bold;
+  width: 20rem;
+  border-radius: 1.75rem;
+  border-width: 5px;
+  position: relative;
+  z-index: 0;
+  margin-right: 46rem;
+}
+
+.btn-warning:hover {
+  background-color: #ffe359;
+  border-color: #ffe359; 
+  color: #545454b0;
+}
+
+.page2 {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  height: 28rem;
+  width: 60rem;
+  border-top-left-radius: 5rem;
+  border-bottom-left-radius: 5rem;
+  border-top-right-radius: 5rem;
+  border-bottom-right-radius: 5rem;
+  box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: column;
+  text-align: left;
+  gap: 1rem;
+  width: 60rem;
+  margin-left: 3.5rem;
+  border-top-left-radius: 5rem;
+  border-bottom-left-radius: 5rem;
 }
