--- a/summoner-list/src/views/Duosearch.css
+++ b/summoner-list/src/views/Duosearch.css
@@ -24,14 +24,15 @@
 .iconbutton-4 {
   display: flex;
   align-items: center;
-  color: #ffffff;
+  color: #240c0c;
+  justify-content: center;
 }
 
 .icon-4 {
   position: absolute;
-  margin-left: 3.1rem;
   z-index: 1;
-  margin-right: 46rem;
+  margin-left: -3.5rem;
+  color: #ffffff;
 }
 
 .btn-warning {
@@ -79,9 +80,5 @@
 
 /* mobile */
 @media screen and (max-width: 960px) {
-  .form-control-lg {
-    border-width: 1px;
-    border-radius: 1rem;
-    border-color: #64646f;
-  }
+
 }
